--- a/views/login/register.html
+++ b/views/login/register.html
@@ -198,13 +198,13 @@
         
           <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px">
             
-            <input type="text" style="border-radius: inherit;height: 30px;padding-left: 90px;" autocomplete="off" value="" class="form-control" placeholder="请输入手机号" id="newEmail"/>
+            <input type="text" style="border-radius: inherit;height: 30px;padding-left: 90px;" autocomplete="false" value="" class="form-control" placeholder="请输入手机号" id="newEmail"/>
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 8px" class="iconfont">&#xe619;</i>
             <i class="phone_q">+86</i>
             <span class="login_error" id="login_e_phone_u" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_u">请输入手机号</em></span>
           </div>
           <div class="form-group clearfix" style="height: 28px;margin-top: 20px;position: relative;margin-bottom: 0px;">
-            <input placeholder="填写图形验证码" type="text" autocomplete="off" value="" id="tupian_user" class="form-control l_u_com_yan" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;"/><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <input placeholder="填写图形验证码" type="text" autocomplete="false" value="" id="tupian_user" class="form-control l_u_com_yan" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;"/><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
             <div class="l_u_com_bang" style="margin-right: 0px;height: 30px;line-heigth: 30px;margin-top: -7px;">
             <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
@@ -213,7 +213,7 @@
             </div>
           </div>
           <div class="form-group clearfix" style="margin-top: 20px;position: relative;">
-            <input  type="text" id="reg_verify" class="form-control l_u_com_yan" autocomplete="off" value="" placeholder="请输入手机验证码" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
+            <input  type="text" id="reg_verify" class="form-control l_u_com_yan" autocomplete="false" value="" placeholder="请输入手机验证码" style="padding-left: 5px;text-indent: 30px;border-radius: inherit;height: 30px;line-heigth: 30px;float:left;" /><!--data-errmsg="验证码号码不正确，仅能包含4位数字"-->
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
             <div class="l_u_com_bang" style="margin-right: 0px;height: 30px;line-heigth: 30px;margin-top: -7px;float: right;">
               <!--<input type="button" class="button" id="sendcun" style="color: #999;border: 1px solid #999;font-size: .6rem;width: 3.5rem;padding: 0 .2rem" @click.stop.prevent="sendphone()" value="发送验证码"/>-->
@@ -228,7 +228,7 @@
           <!-- 额外增加的内容 end -->
           <div class="form-group inputtext_isr clearfix" style="position: relative;height: 28px;margin-top: 20px">
 
-            <input type="password" style="border-radius: inherit;height: 30px;" autocomplete="" value="" class="form-control" placeholder="请输入8-16位数字+字母组成" id="password" >
+            <input type="password" style="border-radius: inherit;height: 30px;" autocomplete="false" value="" class="form-control" placeholder="请输入8-16位数字+字母组成" id="password" >
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 10px" class="iconfont">&#xe606;</i>
             <span class="login_error" id="login_e_phone_p" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone_p">请输入8-16位数字+字母组成</em></span>
           </div>
