修改快速注册

--- a/views/login/register.html
+++ b/views/login/register.html
@@ -458,13 +458,13 @@
   $(function () {
     //清除记录密码功能
     console.log('load---------------');
-    window.load =function(){
+    // window.load =function(){
         console.log('load---------------');　
         document.getElementById('reg_verify').value='';
         document.getElementById('password').value='';
         document.getElementById('newEmail').value='';
         document.getElementById('tupian_user').value='';
-      };
+      // };
   })
 
   function showcode () {
