--- a/views/login/loginUser.html
+++ b/views/login/loginUser.html
@@ -399,14 +399,18 @@
       }
     })
 
-    //清除记录密码功能
-    window.load =function(){  　
+    
+  })
+
+  $(function () {
+    //清除记录密码浏览器自带功能
+     　
       document.getElementById('newEmail_pass').value='';
       document.getElementById('password').value='';
       document.getElementById('newEmail').value='';
       document.getElementById('tupian_user').value='';
       document.getElementById('verify_user').value='';
-    };
+    
   })
 
   function showcode () {
