--- a/views/login/register.html
+++ b/views/login/register.html
@@ -456,10 +456,9 @@
   })
 
   $(function () {
-    //清除记录密码功能
-    console.log('load---------------');
+    //清除记录密码浏览器自带功能
     // window.load =function(){
-        console.log('load---------------');　
+
         document.getElementById('reg_verify').value='';
         document.getElementById('password').value='';
         document.getElementById('newEmail').value='';
