--- a/views/login/login.html
+++ b/views/login/login.html
@@ -140,5 +140,14 @@
   <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_login.js" type="text/javascript" charset="utf-8"></script>
 
+  <script>
+    $(function () {
+      //清除记录密码浏览器自带功能
+        　
+        document.getElementById('newEmail').value='';
+        document.getElementById('password').value='';
+      
+    })
+  </script>
 </body>
 </html>
