--- a/views/login/login.html
+++ b/views/login/login.html
@@ -98,7 +98,7 @@
             <span class="login_error" id="login_e_phone" style="display: none;"><i class="login_x"></i><em id="login_error_text_phone">请输入手机号</em></span>
           </div>
           <div class="form-group inputtext_isr" style="position: relative;height: 28px;margin-top: 20px">
-            <input type="password" style="border-radius: inherit;" class="form-control" placeholder="密码" required="" id="password" autocomplete="off">
+            <input type="password" style="border-radius: inherit;" class="form-control" placeholder="密码" required="" id="password" autocomplete="new-password">
             <i style="color: #999;position: absolute;top: 8px;width: 12px;left: 13px" class="iconfont">&#xe606;</i>
             <span class="login_error" id="login_e_pass" style="display: none;"><i class="login_x"></i><em id="login_error_text_pass">密码不正确，请输入8-16位数字或字母</em></span>
           </div>
