--- a/views/widget/new_nav_first/new_nav_red.html
+++ b/views/widget/new_nav_first/new_nav_red.html
@@ -12,7 +12,7 @@
         <div class="nav-right">
             <div class="new-city" id="new-city">
                 <div class="citynames" id="city-name-box"><i class="iconfont icon-top">&#xe628;</i>
-                    <span class="cityname" id="city-on">北京</span>
+                    <span class="cityname" id="city-on"></span>
                     <i class="city-icon iconfont">&#xe60b;</i>
                 </div>
                 <!--新的城市下拉框-->
