武昌汉口，活动亮点 评审：淑琴

--- a/views/about/activity_detail.html
+++ b/views/about/activity_detail.html
@@ -128,7 +128,7 @@
         </p>
         <p class="juban-liangdian clearfix">
           <span class="juban-tit">活动亮点：</span>
-          <span class="liangdian-xq">{{ huodongdiye.description  }}</span>
+          <span class="liangdian-xq">{{ huodongdiye.activity_highlights  }}</span>
         </p>
         <p class="juban-crowd clearfix">
           <span class="juban-tit">举办城市：</span>
