--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="city-box-top wuhan" style="display: none;">
                         <div class="city-address">
-                            <i class="iconfont">&#xe603;</i><span>武汉市航空路新世界中心C座20层</span><span class="useMap wh">【点击查看地图】</span>&nbsp;&nbsp;<span>珞瑜路10号群光中心百脑汇23层</span><span class="useMap wc">【点击查看地图】</span>
+                            <i class="iconfont">&#xe603;</i><span>航空路新世界中心C座20层(汉口)</span><span class="useMap wh"  style="margin-left: 0;">【点击查看地图】</span><span>珞瑜路10号群光中心百脑汇23层(武昌)</span><span class="useMap wc"  style="margin-left: 0;">【点击查看地图】</span>
                         </div>
                         <div class="city-phone">
                             <i class="iconfont">&#xe684;</i><span>010-65685656/027-67811600</span>
