--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -125,11 +125,12 @@
 {% import "widget/new_slide_yimin/new_slide3.html" as  slide %}
 {{slide.leyu_slide(userinfo,login_info,helper) }}
 {% endif %}
+{% include "widget2/active_popup/active_popup.html" %}
+<!-- =====活动弹窗===== -->
 {% include "widget/new_footer/common_footer.html" %}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan_zhuye.js"></script>
-<!--<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>-->
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js"></script>
 {% if userinfo.usertype==3 %}
@@ -162,8 +163,6 @@
     };
     with (document)0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];
     $('.banner-box-left .slider').xSlider({
-      //轮播图配置
-//          autoplay : 500,
       current: 0,
       speed: 500,
       intervalTime: 5000,
@@ -171,9 +170,6 @@
       dotPostion:'right'
     });
     $('.banner-box-right .slider').xSlider({
-      //轮播图配置
-//          autoplay : 500,
-//            mode:'vertical',
       current: 0,
       speed: 1000,
       intervalTime: 5000,
@@ -239,131 +235,130 @@
 
     })
     $('.report-btn').on("click", report); //点击举报
+    //明星顾问轮播
+    function appendArticleItem(aitem) {
+      var artUrl = '';
+      if(aitem.type ==1){
+        artUrl = fn.urlgen("case", aitem.id.toString());
+      }else{
+        artUrl =fn.urlgen("article", aitem.id.toString());
+      }
+      var aItemHtml = '<div class="homepage">' +
+          '<div class="homepagecon">' +
+          '<a target="_blank"  href="' + fn.urlgen(aitem.uid.toString()) + '" >';
+          
+          aItemHtml += '<div class="homepageing" style="background-image:url(' + fn.avaterimg(aitem.user_info.uid, 'small', aitem.user_info.status, aitem.user_info.version) + '?time='+new Date().getTime()+'); background-repeat:no-repeat; background-size: cover;"></div>';
+          aItemHtml += '<h3>' + aitem.user_info.realname + '<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>' +
+          '</a>'+
+          '<ul>' +
+          '<div class="bdsharebuttonbox bdshare-button-style0-16" style="margin-top: 12px;">' +
+          '<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>' +
+          '<a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>'+
+          '<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>' +
+          '<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>' +
+          '<div class="report-btn" style="color: #666;font-size: 12px;float: left;margin-top: 6px;margin-right: 5px;" data-artId="'+aitem.id+'" data-url="'+artUrl+'">举报</div>' +
+          '</div>' +
+          '</ul>' +
+          '</div>' +
+          '<div class="homepage-title">' +
+          '<p>' ;
+      if(aitem.type==1){
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
+      }else if(aitem.type==2){
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
+            '</a>' ;
+      }
+      aItemHtml+=  '</p>' +
+          '</div>' +
+          '<div class="homepage-p">' +
+          '<p>' ;
+      if(aitem.type==1){
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.introduce + '...<span style="color: #C13232">【查看详情】</span>' +
+            '</a>' ;
+      }else if(aitem.type==2){
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article", aitem.id.toString()) + '" class="dui-text-warning">' +
+            '</a>' ;
+      }
+      aItemHtml+=  '</p>' +
+          '<p>' ;
+      if(aitem.type==1){
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' +
+            addArticleImg(aitem.img_list) +
+            '</a>' ;
+      }else if(aitem.type==2){
+        aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article", aitem.id.toString()) + '" class="dui-text-warning">' +
+            addArticleImg(aitem.img_list) +
+            '</a>' ;
+      }
+      aItemHtml+=  '</p>' +
+          '<div style="width: 200px;line-height: 38px;float: left;position: relative">'+
+          '<div style="float: left;position: absolute;">'+aitem.add_time+'</div>'+
+          '</div>'+
+          '</div>' +
+          '</div>' +
+          addBottom(aitem);
+      return aItemHtml;
+    }
 
-  //明星顾问轮播
-  function appendArticleItem(aitem) {
-    var artUrl = '';
-    if(aitem.type ==1){
-      artUrl = fn.urlgen("case", aitem.id.toString());
-    }else{
-      artUrl =fn.urlgen("article", aitem.id.toString());
+    function appendFav(favArr) {
+      var favHtml = '';
+      for (var i = 0; i < favArr.length; i++) {
+        favHtml += appendArticleItem(favArr[i]);
+      }
+      $('.right-main').append($(favHtml));
+      window._bd_share_main.init();
+      $('.report-btn').unbind('click');
+      $('.report-btn').on("click", report); //点击举报
+      window._bd_share_main.init();
     }
-    var aItemHtml = '<div class="homepage">' +
-        '<div class="homepagecon">' +
-        '<a target="_blank"  href="' + fn.urlgen(aitem.uid.toString()) + '" >';
-        
-        aItemHtml += '<div class="homepageing" style="background-image:url(' + fn.avaterimg(aitem.user_info.uid, 'small', aitem.user_info.status, aitem.user_info.version) + '?time='+new Date().getTime()+'); background-repeat:no-repeat; background-size: cover;"></div>';
-        aItemHtml += '<h3>' + aitem.user_info.realname + '<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>' +
-        '</a>'+
-        '<ul>' +
-        '<div class="bdsharebuttonbox bdshare-button-style0-16" style="margin-top: 12px;">' +
-        '<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>' +
-        '<a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>'+
-        '<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>' +
-        '<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>' +
-        '<div class="report-btn" style="color: #666;font-size: 12px;float: left;margin-top: 6px;margin-right: 5px;" data-artId="'+aitem.id+'" data-url="'+artUrl+'">举报</div>' +
-        '</div>' +
-        '</ul>' +
-        '</div>' +
-        '<div class="homepage-title">' +
-        '<p>' ;
-    if(aitem.type==1){
-      aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
-    }else if(aitem.type==2){
-      aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.title + '<div></a>' + aitem.tag_list + '</div>';
-          '</a>' ;
-    }
-    aItemHtml+=  '</p>' +
-        '</div>' +
-        '<div class="homepage-p">' +
-        '<p>' ;
-    if(aitem.type==1){
-      aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' + aitem.introduce + '...<span style="color: #C13232">【查看详情】</span>' +
-          '</a>' ;
-    }else if(aitem.type==2){
-      aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article", aitem.id.toString()) + '" class="dui-text-warning">' +
-          '</a>' ;
-    }
-    aItemHtml+=  '</p>' +
-        '<p>' ;
-    if(aitem.type==1){
-      aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("case", aitem.id.toString()) + '" class="dui-text-warning">' +
-          addArticleImg(aitem.img_list) +
-          '</a>' ;
-    }else if(aitem.type==2){
-      aItemHtml+= '<a  target="_blank" href="' + fn.urlgen("article", aitem.id.toString()) + '" class="dui-text-warning">' +
-          addArticleImg(aitem.img_list) +
-          '</a>' ;
-    }
-    aItemHtml+=  '</p>' +
-        '<div style="width: 200px;line-height: 38px;float: left;position: relative">'+
-        '<div style="float: left;position: absolute;">'+aitem.add_time+'</div>'+
-        '</div>'+
-        '</div>' +
-        '</div>' +
-        addBottom(aitem);
-    return aItemHtml;
-  }
 
-  function appendFav(favArr) {
-    var favHtml = '';
-    for (var i = 0; i < favArr.length; i++) {
-      favHtml += appendArticleItem(favArr[i]);
+    function addArticleImg(imgList) {
+      if (imgList == undefined) {
+        return '';
+      }
+      var html = '<ul class="homepage-li" style="float: left;">';
+      for (var j=0; j<imgList.length; j++) {
+        html += '<li style="margin-top: 14px"><img src="'+ fn.imageThumb(imgList[j],'150x150') +'" ></li>';
+      }
+      html += '</ul>';
+      return html;
     }
-    $('.right-main').append($(favHtml));
-    window._bd_share_main.init();
-    $('.report-btn').unbind('click');
-    $('.report-btn').on("click", report); //点击举报
-    window._bd_share_main.init();
-  }
 
-  function addArticleImg(imgList) {
-    if (imgList == undefined) {
-      return '';
+    function addBottom(item) {
+      var html = '<div class="bot_comment clearfix">' +
+          '<ul>' +
+          '<li onclick="showbottom(1, ' + item.id + ')" id="yuedu_li_' + item.id + '">' +
+          '<i class="iconfont " id="yuedu_' + item.id + '">&#xe9ca;</i>' +
+          '<span id="yuedu_span_' + item.id + '">阅读<em id="yuedu_em_' + item.id + '">' + item.views + '</em></span>' +
+          '</li>' +
+          '<li onclick="showbottom(2, ' + item.id + ')" id="shoucang_li_' + item.id + '">' +
+          '<i class="iconfont " id="shoucang_' + item.id + '">&#xe7ed;</i>' +
+          '<span id="shoucang_span_' + item.id + '">收藏<em id="shoucang_em_' + item.id + '">' + item.favorites + '</em></span>' +
+          '</li>' ;
+          if (item.type == 2){
+          html += '<a target="_blank" href="' + fn.urlgen("article", item.id.toString()) + '#cmt">'+
+          '<li onclick="" id="pinglun_li_'+item.id+'">'+
+          '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
+          '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
+          '</li>'+
+          '</a>';
+          } else {
+          html += '<a target="_blank" href="' + fn.urlgen("case", item.id.toString()) + '#cmt">'+
+          '<li onclick="" id="pinglun_li_'+item.id+'">'+
+          '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
+          '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
+          '</li>'+
+          '</a>';
+      }
+          html += '<li class="dian" onclick="showbottom(4, ' + item.id + ')" id="dianzan_li_' + item.id + '">' +
+          '<i class="iconfont " id="dianzan_' + item.id + '">&#xe651;</i>' +
+          '<span id="dianzan_span_' + item.id + '">点赞<em id="dianzan_em_' + item.id + '">' + item.votes + '</em></span>' +
+          '</li>' +
+          '</ul>' +
+          '</div>';
+      return html;
     }
-    var html = '<ul class="homepage-li" style="float: left;">';
-    for (var j=0; j<imgList.length; j++) {
-      html += '<li style="margin-top: 14px"><img src="'+ fn.imageThumb(imgList[j],'150x150') +'" ></li>';
-    }
-    html += '</ul>';
-    return html;
-  }
-
-  function addBottom(item) {
-    var html = '<div class="bot_comment clearfix">' +
-        '<ul>' +
-        '<li onclick="showbottom(1, ' + item.id + ')" id="yuedu_li_' + item.id + '">' +
-        '<i class="iconfont " id="yuedu_' + item.id + '">&#xe9ca;</i>' +
-        '<span id="yuedu_span_' + item.id + '">阅读<em id="yuedu_em_' + item.id + '">' + item.views + '</em></span>' +
-        '</li>' +
-        '<li onclick="showbottom(2, ' + item.id + ')" id="shoucang_li_' + item.id + '">' +
-        '<i class="iconfont " id="shoucang_' + item.id + '">&#xe7ed;</i>' +
-        '<span id="shoucang_span_' + item.id + '">收藏<em id="shoucang_em_' + item.id + '">' + item.favorites + '</em></span>' +
-        '</li>' ;
-        if (item.type == 2){
-        html += '<a target="_blank" href="' + fn.urlgen("article", item.id.toString()) + '#cmt">'+
-        '<li onclick="" id="pinglun_li_'+item.id+'">'+
-        '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
-        '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
-        '</li>'+
-        '</a>';
-        } else {
-        html += '<a target="_blank" href="' + fn.urlgen("case", item.id.toString()) + '#cmt">'+
-        '<li onclick="" id="pinglun_li_'+item.id+'">'+
-        '<i class="iconfont " id="pinglun_'+item.id+'" style="color: #666">&#xe61f;</i>'+
-        '<span id="pinglun_span_'+item.id+'">评论<em id="pinglun_em_'+item.id+'">'+item.comments+'</em></span>'+
-        '</li>'+
-        '</a>';
-    }
-        html += '<li class="dian" onclick="showbottom(4, ' + item.id + ')" id="dianzan_li_' + item.id + '">' +
-        '<i class="iconfont " id="dianzan_' + item.id + '">&#xe651;</i>' +
-        '<span id="dianzan_span_' + item.id + '">点赞<em id="dianzan_em_' + item.id + '">' + item.votes + '</em></span>' +
-        '</li>' +
-        '</ul>' +
-        '</div>';
-    return html;
-  }
-  function report() {
+    function report() {
     //举报调取函数
     if (login_ss == undefined) {
       // layer.msg('你还没有登录')
@@ -464,8 +459,7 @@
       }
     });
   }
-
-})
+  })
 </script>
 </body>
 </html>
