--- a/views/index.html
+++ b/views/index.html
@@ -18,8 +18,8 @@
 <body>
   <div class="dialog-modal" style="display: none;">
     <div class="modal-content">
-      <a href="javascript:;" class="close"></a>
-      <form class="formContent">
+      <form class="formContent formposirion">
+          <a href="javascript:;" class="close"></a>
         <div class="form-group">
           <div><input type="text" placeholder="请输入姓名" class="name"></div>
           <div><input type="text" placeholder="请输入手机号" class="iphone"></div>
@@ -62,7 +62,7 @@
             <input type="checkbox" id="female" checked="checked"/><label for="female">注册JJL网站账号</label>
           </div>
         </div>
-        <button class="huoqu-button">点击获取优惠券</button>
+        <button class="huoqu-button" id="handelSub">点击获取优惠券</button>
       </form>
     </div>
   </div>
