添加活动弹窗页

--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -125,8 +125,8 @@
 {% import "widget/new_slide_yimin/new_slide3.html" as  slide %}
 {{slide.leyu_slide(userinfo,login_info,helper) }}
 {% endif %}
-{% include "widget2/active_popup/active_popup.html" %}
 <!-- =====活动弹窗===== -->
+{# {% include "widget2/active_popup/active_popup.html" %} #}
 {% include "widget/new_footer/common_footer.html" %}
 <script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
