--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -412,11 +412,12 @@
 .contry-list li{
     display: inline-block;
     border:solid 1px #999;
-    width:69px;
+    width:67px;
     text-align: center;
     border-radius: 4px;
     font-size: 12px;
     margin-right: 10px;
+    cursor: default;
 }
 .huoqu-button{
     height: 55px;
