添加顾问 空间的活动弹窗

--- a/views/article_detail.html
+++ b/views/article_detail.html
@@ -176,6 +176,8 @@
   {{slide.leyu_slide(userinfo,login_info,helper) }}
   {% endif %}
   {% include "widget/new_footer/common_footer.html" %}
+  <!-- =====活动弹窗===== -->
+  {% include "widget2/active_popup/active_popup.html" %}
   <div>
     <input type="hidden" id="detail_id" value="{{article_id}}"/>
   </div>
