--- a/views/index.html
+++ b/views/index.html
@@ -16,12 +16,12 @@
 </style>
 </head>
 <body>
-  <div class="dialog-modal" style="_display: none;">
+  <div class="dialog-modal" style="display: none;">
     <div class="modal-content">
       <div class="formContent formposirion">
           <a href="javascript:;" class="close"></a>
         <div class="form-group">
-          <div><input type="text" placeholder="请输入姓名" class="name" id="myname"></div>
+          <div><input type="text" placeholder="请输入姓名" class="name" id="myname" maxlength="10"></div>
           <div><input type="text" placeholder="请输入手机号" class="iphone"></div>
           <div style="position: relative;">
             <input type="text" class="pass-code">
@@ -42,12 +42,12 @@
                         id:"2"
                     },
                     {
-                        name:"加拿大",
-                        id:"3"
+                      name:"澳大利亚",
+                      id:"4"
                     },
                     {
-                        name:"澳大利亚",
-                        id:"4"
+                        name:"加拿大",
+                        id:"3"
                     },
                     {
                         name:"新西兰",
