--- a/views/index.html
+++ b/views/index.html
@@ -144,9 +144,9 @@
     </div>
   </div>
 {% include "widget/common_hide/common_hide.html"%}
-<div class="zhezhao" id="zhezhaox" style="display: none">
+<div class="zhezhao" id="zhezhaox" style="display: none;z-index: 1003">
 </div>
-<div id="zhezhaos" style="position: fixed;left: 50%; margin-left: -350px;z-index: 1000000;top: 50%;margin-top: -215px;display: none;">
+<div id="zhezhaos" style="position: fixed;left: 50%; margin-left: -350px;z-index: 1004;top: 50%;margin-top: -215px;display: none;">
   <div class="xuanze-con">
     <h1 id="guanbi-tankuang">欢迎来到金吉列留学、请选择合适的金吉列分公司所在地<span>全国热线电话:400-010-8000</span></h1>
     <div class="xuanze-ing">
