--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -396,7 +396,7 @@
     z-index: 2;
 }
 .contry-list .endright{margin-right: 0;}
-.contry-list .contry-active{color: #c13232;border:solid 1px #c13232;}
+.contry-list .contry-active{color: #fff;background: #c13232;}
 .contry-list::after{
     display: block;
     content: "";
