--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -201,7 +201,7 @@
                     if(msg.code == 0){
                         countDown();
                     } else {
-                        layer.msg(msg.message);
+                        layer.msg(msg.massage);
                         $(".act-code-btn").bind("click",getCode);
                     }
                 },
