--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -258,6 +258,7 @@
                         clearInterval(timer);
                         $(".act-code-btn").html('点击发送验证码');
                         $('.act-pop-country li').removeClass('active');
+                        $(".act-code-btn").bind("click",getCode);
                     } else {
                         layer.msg(msg.massage);
                     }
