--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -3,11 +3,12 @@
         width:100%;
         height:130px;
         position:fixed;
-        left:0;
+        /* left:0; */
         bottom:0;
         z-index:800;
         background:url(../../assets/img/popup_bg.png) no-repeat center center;
         background-size: cover;
+        min-width:1200px;
     }
     .act-pop-info-box{
         margin-top:50px;
